<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:padding="5dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="5dp"
        android:gravity="bottom"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/firstL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/numText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:ems="10"
                android:layout_gravity="bottom"
                android:gravity="center"
                android:hint="@string/hint"
                android:focusable="false"
                android:inputType="none" />

            <ImageButton
                android:id="@+id/bDel"
                android:src="@android:drawable/ic_input_delete"
                style="@style/Widget.AppCompat.Button.Colored"
                app:backgroundTint="#F03949"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="bDel"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/secondL"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bOne"
                style="@style/Widget.AppCompat.Button.Colored"
                app:backgroundTint="#D3D3D3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/one"
                android:textSize="20sp"
                android:onClick="bOne"
                android:textStyle="bold" />

            <Button
                android:id="@+id/bTwo"
                style="@style/Widget.AppCompat.Button.Colored"
                app:backgroundTint="#D3D3D3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/two"
                android:textSize="20sp"
                android:onClick="bTwo"
                android:textStyle="bold" />

            <Button
                android:id="@+id/bThree"
                style="@style/Widget.AppCompat.Button.Colored"
                app:backgroundTint="#D3D3D3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/three"
                android:textSize="20sp"
                android:onClick="bThree"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/thirdL"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bFour"
                style="@style/Widget.AppCompat.Button.Colored"
                app:backgroundTint="#D3D3D3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/four"
                android:textSize="20sp"
                android:onClick="bFour"
                android:textStyle="bold" />

            <Button
                android:id="@+id/bFive"
                style="@style/Widget.AppCompat.Button.Colored"
                app:backgroundTint="#D3D3D3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/five"
                android:textSize="20sp"
                android:onClick="bFive"
                android:textStyle="bold" />

            <Button
                android:id="@+id/bSix"
                style="@style/Widget.AppCompat.Button.Colored"
                app:backgroundTint="#D3D3D3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/six"
                android:textSize="20sp"
                android:onClick="bSix"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/forthL"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bSeven"
                style="@style/Widget.AppCompat.Button.Colored"
                app:backgroundTint="#D3D3D3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/seven"
                android:textSize="20sp"
                android:onClick="bSeven"
                android:textStyle="bold" />

            <Button
                android:id="@+id/bEight"
                style="@style/Widget.AppCompat.Button.Colored"
                app:backgroundTint="#D3D3D3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/eight"
                android:textSize="20sp"
                android:onClick="bEight"
                android:textStyle="bold" />

            <Button
                android:id="@+id/bNine"
                style="@style/Widget.AppCompat.Button.Colored"
                app:backgroundTint="#D3D3D3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/nine"
                android:textSize="20sp"
                android:onClick="bNine"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/fifthL"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bStar"
                style="@style/Widget.AppCompat.Button.Colored"
                app:backgroundTint="#D3D3D3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/star"
                android:textSize="20sp"
                android:onClick="bStar"
                android:textStyle="bold" />

            <Button
                android:id="@+id/bZero"
                style="@style/Widget.AppCompat.Button.Colored"
                app:backgroundTint="#D3D3D3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/zero"
                android:textSize="20sp"
                android:onClick="bZero"
                android:textStyle="bold" />

            <Button
                android:id="@+id/bHash"
                style="@style/Widget.AppCompat.Button.Colored"
                app:backgroundTint="#D3D3D3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/hash"
                android:textSize="20sp"
                android:onClick="bHash"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/sixthL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp">

            <Button
                android:id="@+id/bCall"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#008000	"
                android:text="@string/call"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:onClick="bCall"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>